localization/v2.6.x/site/pt/home/home.md
---
id: home.md
---
<div class="doc-h1-wrapper">
<p><h1 class="title">
Bem-vindo ao Milvus Docs!</h1></p>
<p><h2 class="sub-title">
Aqui aprenderá o que é o Milvus e como instalar, utilizar e implementar o Milvus para criar uma aplicação de acordo com as suas necessidades comerciais.</h2></p>
</div>
<div class="doc-home-promotion-wrapper">
  <div class="promotion-content">
    <h2 class="promotion-title">Experimente o Managed Milvus gratuitamente!</h2>
    <p class="promotion-desc">O Zilliz Cloud é livre de complicações, é alimentado por Milvus e é 10x mais rápido.</p>
  </div>
  <div class="cta-wrapper">
   <a class="cta-global" href="https://cloud.zilliz.com/signup?utm_source=partner&utm_medium=referral&utm_campaign=2025-02-24_doc_home_milvus.io">Zilliz Cloud</a></div>
</div>
<h2 id="Get-Started" class="common-anchor-header">Começar a utilizar<button data-href="#Get-Started" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><div class="card-wrapper">
<div class="start_card_container">
  
   <a href="/docs/pt/install_standalone-docker.md"> <img translate="no" src="/docs/v2.6.x/assets/home_install.svg" alt="icon" />
   </a> <a href="/docs/pt/install_standalone-docker.md"> <p class="link-btn">Instalar o Milvus</p> </a><p>Saiba como instalar o Milvus usando o Docker Compose ou no Kubernetes.</p>
</div>
<div class="start_card_container">
  
   <a href="/docs/pt/quickstart.md"> <img translate="no" src="/docs/v2.6.x/assets/home_quick_start.svg" alt="icon" />
   </a> <a href="/docs/pt/quickstart.md"> <p class="link-btn">Início rápido</p> </a><p>Saiba como executar rapidamente o Milvus com código de exemplo.</p>
</div>
<div class="start_card_container">
  
   <a href="/bootcamp"> <img translate="no" src="/docs/v2.6.x/assets/home_bootcamp.svg" alt="icon" />
   </a> <a href="/bootcamp"> <p class="link-btn">Bootcamp</p> </a><p>
  Aprenda a construir aplicações de pesquisa de similaridade vetorial com Milvus.  </p>
</div>
</div>
<h2 id="Recommended-articles" class="common-anchor-header">Artigos recomendados<button data-href="#Recommended-articles" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><div class="doc-home-recommend-section">
<div class="recomment-item">
  <p>Utilizar</p>
<ul>
<li><a href="/docs/pt/manage-collections.md">Gerir colecções</a></li>
<li><a href="/docs/pt/insert-update-delete.md">Inserir, Upsert e Excluir</a></li>
<li><a href="/docs/pt/single-vector-search.md">Pesquisa de vetor único</a></li>
<li><a href="/docs/pt/multi-vector-search.md">Pesquisa híbrida</a></li>
<li><a href="/docs/pt/get-and-scalar-query.md">Obter e consulta escalar</a></li>
<li><a href="/docs/pt/milvus_for_agents.md">Milvus para agentes de IA</a></li>
</ul>
</div>
<div class="recomment-item">
  <p>Implantar</p>
<ul>
<li><a href="/docs/pt/configure-docker.md">Configurar o Milvus</a></li>
<li><a href="/docs/pt/deploy_s3.md">Gerir dependências</a></li>
<li><a href="/docs/pt/eks.md">Implementar em nuvens</a></li>
<li><a href="/docs/pt/scaleout.md">Dimensionar um cluster Milvus</a></li>
<li><a href="/docs/pt/monitor_overview.md">Monitorizar e alertar</a></li>
</ul>
</div>
<div class="recomment-item">
  <p>Aprender</p>
<ul>
<li><a href="/docs/pt/system_configuration.md">Configuração do sistema</a></li>
<li><a href="/docs/pt/architecture_overview.md">Visão geral da arquitetura</a></li>
<li><a href="/docs/pt/index-explained.md">Índice explicado</a></li>
<li><a href="/docs/pt/metric.md">Métricas de similaridade</a></li>
<li><a href="/docs/pt/glossary.md">Glossário</a></li>
</ul>
</div>
</div>
<div class="doc-home-what-is-new">
<h2 id="Whats-new-in-docs" class="common-anchor-header">O que há de novo na documentação<button data-href="#Whats-new-in-docs" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><p><em>março de 2026 - Actualizações do Milvus 2.6.x</em></p>
<ul>
<li>Adicionada a secção <a href="/docs/pt/milvus_for_agents.md">Milvus para Agentes de IA</a> com guias de instruções.</li>
<li>Adicionada orientação sobre como usar <a href="/docs/pt/google-gemini.md">a função de incorporação Gemini</a>.</li>
<li>Adicionada orientação sobre como <a href="/docs/pt/primary-key-search.md">pesquisar por chaves primárias</a>.</li>
<li>Adicionada orientação sobre como usar <a href="/docs/pt/text-highlighter.md">o marcador de texto</a> nos resultados da pesquisa.</li>
<li>Adicionadas descrições do <a href="/docs/pt/geometry-field.md">campo geometry</a>, do <a href="/docs/pt/timestamptz-field.md">campo timestamptz</a>, do <a href="/docs/pt/tiered-storage-overview.md">armazenamento em camadas</a> e da <a href="/docs/pt/array-of-structs.md">matriz de structs</a>.</li>
</ul>
</div>
